test CORS websecconfig